add yandex .net api save requests types to db

--- a/Rb.Data/App.config
+++ b/Rb.Data/App.config
@@ -11,6 +11,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="RbDatabase" connectionString="Data Source=.\SQLEXPRESS;Integrated Security=SSPI;Encrypt=False;TrustServerCertificate=False;Database=RareBooks;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
+    <add name="RbDatabase" connectionString="Data Source=.\SQLEXPRESS;Integrated Security=SSPI;Encrypt=False;TrustServerCertificate=False;Database=RbDatabase;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
