--- a/Rb.Common/Rb.Common.csproj
+++ b/Rb.Common/Rb.Common.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{14D4B5D8-67BB-4409-8771-CC6CBE6A6827}</ProjectGuid>
+    <ProjectGuid>{100059E8-CCC0-4A2F-9092-3DE9AA9CACB3}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Rb.Data</RootNamespace>
-    <AssemblyName>Rb.Data</AssemblyName>
+    <RootNamespace>Rb.Common</RootNamespace>
+    <AssemblyName>Rb.Common</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,49 +30,17 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="EntityFramework">
-      <HintPath>..\packages\EntityFramework.6.1.1\lib\net45\EntityFramework.dll</HintPath>
-    </Reference>
-    <Reference Include="EntityFramework.SqlServer">
-      <HintPath>..\packages\EntityFramework.6.1.1\lib\net45\EntityFramework.SqlServer.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
-    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Entities\BaseEntity.cs" />
-    <Compile Include="Entities\Book.cs" />
-    <Compile Include="Entities\Request.cs" />
-    <Compile Include="Migrations\201411062036078_Initial.cs" />
-    <Compile Include="Migrations\201411062036078_Initial.Designer.cs">
-      <DependentUpon>201411062036078_Initial.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201411112050070_AddRequests.cs" />
-    <Compile Include="Migrations\201411112050070_AddRequests.Designer.cs">
-      <DependentUpon>201411112050070_AddRequests.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="EnumExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RbDbContext.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Migrations\201411062036078_Initial.resx">
-      <DependentUpon>201411062036078_Initial.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201411112050070_AddRequests.resx">
-      <DependentUpon>201411112050070_AddRequests.cs</DependentUpon>
-    </EmbeddedResource>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Rb.Common\Rb.Common.csproj">
-      <Project>{100059e8-ccc0-4a2f-9092-3de9aa9cacb3}</Project>
-      <Name>Rb.Common</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
