--- a/Rb.Data/Rb.Data.csproj
+++ b/Rb.Data/Rb.Data.csproj
@@ -80,6 +80,26 @@
     <Compile Include="Migrations\201411252134057_AddHathitrustResult.Designer.cs">
       <DependentUpon>201411252134057_AddHathitrustResult.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201412020656053_Rename.cs" />
+    <Compile Include="Migrations\201412020656053_Rename.Designer.cs">
+      <DependentUpon>201412020656053_Rename.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201412020720345_AddKeys.cs" />
+    <Compile Include="Migrations\201412020720345_AddKeys.Designer.cs">
+      <DependentUpon>201412020720345_AddKeys.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201412020747534_WorldcatForeignKey.cs" />
+    <Compile Include="Migrations\201412020747534_WorldcatForeignKey.Designer.cs">
+      <DependentUpon>201412020747534_WorldcatForeignKey.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201412021927096_AddKeysToHathitrustResult.cs" />
+    <Compile Include="Migrations\201412021927096_AddKeysToHathitrustResult.Designer.cs">
+      <DependentUpon>201412021927096_AddKeysToHathitrustResult.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201412021931029_HathitrustResultForeignKey.cs" />
+    <Compile Include="Migrations\201412021931029_HathitrustResultForeignKey.Designer.cs">
+      <DependentUpon>201412021931029_HathitrustResultForeignKey.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RbDbContext.cs" />
@@ -114,6 +134,21 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201411252134057_AddHathitrustResult.resx">
       <DependentUpon>201411252134057_AddHathitrustResult.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201412020656053_Rename.resx">
+      <DependentUpon>201412020656053_Rename.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201412020720345_AddKeys.resx">
+      <DependentUpon>201412020720345_AddKeys.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201412020747534_WorldcatForeignKey.resx">
+      <DependentUpon>201412020747534_WorldcatForeignKey.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201412021927096_AddKeysToHathitrustResult.resx">
+      <DependentUpon>201412021927096_AddKeysToHathitrustResult.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201412021931029_HathitrustResultForeignKey.resx">
+      <DependentUpon>201412021931029_HathitrustResultForeignKey.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
