--- a/Rb.WebSearcher/Rb.Yandex.WebSearcher.csproj
+++ b/Rb.WebSearcher/Rb.Yandex.WebSearcher.csproj
@@ -4,15 +4,16 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{100059E8-CCC0-4A2F-9092-3DE9AA9CACB3}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{12759C97-90A2-4089-BC5F-481C964BE961}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Rb.Common</RootNamespace>
-    <AssemblyName>Rb.Common</AssemblyName>
+    <RootNamespace>Rb.Yandex.WebSearcher</RootNamespace>
+    <AssemblyName>Rb.Yandex.WebSearcher</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -22,6 +23,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -30,19 +32,35 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\EntityFramework.6.1.1\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Extensions\EnumExtensions.cs" />
-    <Compile Include="Extensions\IEnumerableExtensions.cs" />
-    <Compile Include="LanguageSpecificAttribute.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="YandexWebSearcher.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Rb.Common\Rb.Common.csproj">
+      <Project>{100059e8-ccc0-4a2f-9092-3de9aa9cacb3}</Project>
+      <Name>Rb.Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Rb.Data\Rb.Data.csproj">
+      <Project>{14D4B5D8-67BB-4409-8771-CC6CBE6A6827}</Project>
+      <Name>Rb.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Rb.Yandex\Rb.Yandex.csproj">
+      <Project>{df6c5324-ca7a-4f44-ae16-0cb0073bb846}</Project>
+      <Name>Rb.Yandex</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
