--- a/Rb.Common/Rb.Common.csproj
+++ b/Rb.Common/Rb.Common.csproj
@@ -39,6 +39,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Enums\LanguageCode.cs" />
+    <Compile Include="Enums\RequestType.cs" />
     <Compile Include="Extensions\EnumExtensions.cs" />
     <Compile Include="Extensions\IEnumerableExtensions.cs" />
     <Compile Include="LanguageSpecificAttribute.cs" />
