--- a/Rb.RareListParser/Rb.RareListParser.csproj
+++ b/Rb.RareListParser/Rb.RareListParser.csproj
@@ -58,6 +58,10 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Rb.Common\Rb.Common.csproj">
+      <Project>{100059e8-ccc0-4a2f-9092-3de9aa9cacb3}</Project>
+      <Name>Rb.Common</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Rb.Data\Rb.Data.csproj">
       <Project>{14D4B5D8-67BB-4409-8771-CC6CBE6A6827}</Project>
       <Name>Rb.Data</Name>
