--- a/Rb.Common/Rb.Common.csproj
+++ b/Rb.Common/Rb.Common.csproj
@@ -43,8 +43,10 @@
     <Compile Include="Enums\RequestType.cs" />
     <Compile Include="Extensions\EnumExtensions.cs" />
     <Compile Include="Extensions\IEnumerableExtensions.cs" />
+    <Compile Include="Extensions\MathExtensions.cs" />
     <Compile Include="LanguageSpecificAttribute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Range.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
