--- a/Rb.BookClassifier.RequestType/Rb.BookClassifier.RequestType.csproj
+++ b/Rb.BookClassifier.RequestType/Rb.BookClassifier.RequestType.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{1512CF41-1D15-4B0C-9188-45CC87457083}</ProjectGuid>
+    <ProjectGuid>{C5AA83FD-7A05-40F8-9D8D-ECC8EC188C4B}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Rb.BookClassifier.Binary</RootNamespace>
-    <AssemblyName>Rb.BookClassifier.Binary</AssemblyName>
+    <RootNamespace>Rb.BookClassifier.RequestType</RootNamespace>
+    <AssemblyName>Rb.BookClassifier.RequestType</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -32,30 +32,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="AForge">
-      <HintPath>..\packages\AForge.2.2.5\lib\AForge.dll</HintPath>
-    </Reference>
-    <Reference Include="AForge.Genetic">
-      <HintPath>..\packages\AForge.Genetic.2.2.5\lib\AForge.Genetic.dll</HintPath>
-    </Reference>
-    <Reference Include="AForge.Math">
-      <HintPath>..\packages\AForge.Math.2.2.5\lib\AForge.Math.dll</HintPath>
-    </Reference>
-    <Reference Include="AForge.Neuro">
-      <HintPath>..\packages\AForge.Neuro.2.2.5\lib\AForge.Neuro.dll</HintPath>
-    </Reference>
-    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\EntityFramework.6.1.2\lib\net45\EntityFramework.dll</HintPath>
-    </Reference>
-    <Reference Include="EntityFramework.SqlServer">
-      <HintPath>..\packages\EntityFramework.6.1.2\lib\net45\EntityFramework.SqlServer.dll</HintPath>
-    </Reference>
     <Reference Include="EPPlus">
       <HintPath>..\packages\EPPlus.4.0.3\lib\net20\EPPlus.dll</HintPath>
     </Reference>
     <Reference Include="System" />
-    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -64,16 +44,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Book\TestBook.cs" />
+    <Compile Include="Book\TestBookFactory.cs" />
     <Compile Include="Book\TestBookRanges.cs" />
-    <Compile Include="Book\TestSetWriter.cs" />
+    <Compile Include="Book\TestBookVectorizer.cs" />
+    <Compile Include="Book\TestSetReader.cs" />
     <Compile Include="Classifier.cs" />
     <Compile Include="Neural\TestCaseFactory.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Book\TestBook.cs" />
-    <Compile Include="Book\TestBookFactory.cs" />
-    <Compile Include="Book\TestBookVectorizer.cs" />
-    <Compile Include="Book\TestSetReader.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -81,19 +60,14 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Rb.BookClassifier.Common\Rb.BookClassifier.Common.csproj">
-      <Project>{7DDE1440-32F7-4BF8-A53C-D2790CCE71DB}</Project>
+      <Project>{7dde1440-32f7-4bf8-a53c-d2790cce71db}</Project>
       <Name>Rb.BookClassifier.Common</Name>
     </ProjectReference>
     <ProjectReference Include="..\Rb.Common\Rb.Common.csproj">
       <Project>{100059e8-ccc0-4a2f-9092-3de9aa9cacb3}</Project>
       <Name>Rb.Common</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Rb.Data\Rb.Data.csproj">
-      <Project>{14d4b5d8-67bb-4409-8771-cc6cbe6a6827}</Project>
-      <Name>Rb.Data</Name>
-    </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
