--- a/Rb.BookClassifier.Snippet/Rb.BookClassifier.Snippet.csproj
+++ b/Rb.BookClassifier.Snippet/Rb.BookClassifier.Snippet.csproj
@@ -4,15 +4,16 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7DDE1440-32F7-4BF8-A53C-D2790CCE71DB}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{3E4278A7-EC94-4377-960F-D223F20A2912}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Rb.BookClassifier.Common</RootNamespace>
-    <AssemblyName>Rb.BookClassifier.Common</AssemblyName>
+    <RootNamespace>Rb.BookClassifier.Snippet</RootNamespace>
+    <AssemblyName>Rb.BookClassifier.Snippet</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -22,6 +23,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -30,17 +32,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="AForge">
-      <HintPath>..\packages\AForge.2.2.5\lib\AForge.dll</HintPath>
-    </Reference>
-    <Reference Include="AForge.Genetic">
-      <HintPath>..\packages\AForge.Genetic.2.2.5\lib\AForge.Genetic.dll</HintPath>
-    </Reference>
-    <Reference Include="AForge.Math">
-      <HintPath>..\packages\AForge.Math.2.2.5\lib\AForge.Math.dll</HintPath>
-    </Reference>
-    <Reference Include="AForge.Neuro">
-      <HintPath>..\packages\AForge.Neuro.2.2.5\lib\AForge.Neuro.dll</HintPath>
+    <Reference Include="EPPlus">
+      <HintPath>..\packages\EPPlus.4.0.3\lib\net20\EPPlus.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -51,34 +44,29 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Book\ITestBook.cs" />
-    <Compile Include="Book\ITestBookRanges.cs" />
-    <Compile Include="Book\TestBookRanges.cs" />
-    <Compile Include="Book\TestBookVectorizer.cs" />
-    <Compile Include="Classifier\ClassifierBase.cs" />
-    <Compile Include="IVectorizer.cs" />
-    <Compile Include="Neural\ITestCase.cs" />
-    <Compile Include="Neural\ITestCaseFactory.cs" />
-    <Compile Include="Neural\Settings\LearningSettings.cs" />
-    <Compile Include="Neural\Network.cs" />
-    <Compile Include="Neural\Settings\StopConditions.cs" />
-    <Compile Include="Neural\Settings\StopType.cs" />
-    <Compile Include="Neural\Book\BookTestCase.cs" />
-    <Compile Include="Neural\Snippet\SnippetTestCase.cs" />
+    <Compile Include="Classifier.cs" />
+    <Compile Include="Neural\TestCaseFactory.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Snippet\ITestSnippet.cs" />
+    <Compile Include="Snippet\TestSetReader.cs" />
+    <Compile Include="Snippet\TestSnippet.cs" />
+    <Compile Include="Snippet\TestSnippetFactory.cs" />
     <Compile Include="Snippet\TestSnippetVectorizer.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Rb.BookClassifier.Common\Rb.BookClassifier.Common.csproj">
+      <Project>{7dde1440-32f7-4bf8-a53c-d2790cce71db}</Project>
+      <Name>Rb.BookClassifier.Common</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Rb.Common\Rb.Common.csproj">
-      <Project>{100059E8-CCC0-4A2F-9092-3DE9AA9CACB3}</Project>
+      <Project>{100059e8-ccc0-4a2f-9092-3de9aa9cacb3}</Project>
       <Name>Rb.Common</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
