--- a/Rb.BookClassifier.Common/Rb.BookClassifier.Common.csproj
+++ b/Rb.BookClassifier.Common/Rb.BookClassifier.Common.csproj
@@ -66,10 +66,12 @@
     <Compile Include="Neural\Book\BookTestCase.cs" />
     <Compile Include="Neural\Snippet\SnippetTestCase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Snippet\ITestSnippet.cs" />
-    <Compile Include="Snippet\ITestSnippetRanges.cs" />
-    <Compile Include="Snippet\TestSnippetRangesBase.cs" />
-    <Compile Include="Snippet\TestSnippetVectorizer.cs" />
+    <Compile Include="Snippet\ISnippet.cs" />
+    <Compile Include="Snippet\ISnippetData.cs" />
+    <Compile Include="Snippet\ISnippetRanges.cs" />
+    <Compile Include="Snippet\Levinstein.cs" />
+    <Compile Include="Snippet\SnippetRangesBase.cs" />
+    <Compile Include="Snippet\SnippetVectorizer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
